--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"jsdoc": "^3.6.7",
 		"jsonwebtoken": "^8.5.1",
 		"moment": "^2.27.0",
+		"path-parse": "^1.0.7",
 		"pg": "^8.2.1",
 		"url": "^0.11.0",
 		"validator": "^13.1.1"
